<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"

    tools:context="ec.edu.ups.byron_adrian_gmn.controlrobot.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">


        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9999CC"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Comandostxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="Comandos"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/negro"/>

            <Button
                android:id="@+id/btnTriste"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rtriste"
                android:text="@string/draggable_button11" />

            <Button
                android:id="@+id/btnnormal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rtnormal"
                android:text="@string/draggable_button10" />

            <Button
                android:id="@+id/btnalegre"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rtalegre"
                android:text="@string/draggable_button9" />

            <Button
                android:id="@+id/btnade"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/adelante"
                android:text="@string/draggable_button5" />

            <Button
                android:id="@+id/btnretro"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/atras"
                android:text="@string/draggable_button6" />

            <Button
                android:id="@+id/btnparar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/detener"
                android:text="DETENER" />

            <Button
                android:id="@+id/btngizq"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/izq"
                android:text="@string/draggable_button8" />

            <Button
                android:id="@+id/btngder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/der"
                android:text="@string/draggable_button7" />


            <Button
                android:id="@+id/btnbaizq"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/brazo_abajo"
                android:text="BRAZO IZQUIERDO" />

            <Button
                android:id="@+id/btnbarrizq"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/brazo_arriba"
                android:text="BRAZO IZQUIERDO" />

            <Button
                android:id="@+id/btnbader"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/brazo_abajo1"
                android:text="BRAZO DERECHO" />

            <Button
                android:id="@+id/btnbarrder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/brazo_arriba1"
                android:text="BRAZO DERECHO" />


        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/yellowLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/fondo"
        android:gravity="center"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <LinearLayout
                android:id="@+id/left_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#555555"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Comandostxt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Arrastra los comandos a la parte oscura para Ejecutar"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnsalir"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/salir"
                    android:text="Salir"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/btnPlay"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ejecutar"
                    android:baselineAligned="false"
                    android:text=""
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/btnlimpiar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/limpiar"
                    android:text="@string/draggable_button13"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>
